# Nathanielsblog

./: CNAME  README.md  index.html  pyproject.toml
docs/: index.html
docs/.lektor/: buildstate
docs/about/: index.html
docs/films/: index.html
docs/films/Big_Trouble_in_Little_China/: index.html
docs/films/Braindead/: index.html
docs/films/Critique_Methodology/: index.html
docs/films/The_Bride_of_Frankenstein/: index.html
docs/films/The_Legend_of_Sleepy_Hollow/: index.html
docs/films/list/: index.html
docs/james/: index.html
docs/links/: index.html
docs/notes/: index.html
docs/notes/2021-12-05/: index.html
docs/notes/2021-12-12/: index.html
docs/notes/2022-01-23/: index.html
docs/occult/: index.html
docs/occult/first-post/: index.html
lektor/: Nathaniel's Occult Blog.lektorproject
lektor/assets/static/: style.css
lektor/content/: contents.lr
lektor/content/about/: contents.lr
lektor/content/films/: contents.lr
lektor/content/films/Big_Trouble_in_Little_China/: contents.lr
lektor/content/films/Braindead/: contents.lr
lektor/content/films/Critique_Methodology/: contents.lr
lektor/content/films/The_Bride_of_Frankenstein/: contents.lr
lektor/content/films/The_Legend_of_Sleepy_Hollow/: contents.lr
lektor/content/films/list/: contents.lr
lektor/content/james/: contents.lr
lektor/content/links/: contents.lr
lektor/content/notes/: contents.lr
lektor/content/notes/2021-12-05/: contents.lr
lektor/content/notes/2021-12-12/: contents.lr
lektor/content/notes/2022-01-23/: contents.lr
lektor/templates/: layout.html
(+1 files in other folders)
