[tool.poetry]
name = "nathanielsblog"
version = "0.0.2"
description = "Nathaniel's Blog, a Eastern Texas University Savage World \"In-Game\" character's blog."
authors = ["vlek <derekmccammmond@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Lektor = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
